feat: add supervisor role and loan reassigmen
